[package]
name = "kctf-pow"
version = "1.1.0"
edition = "2018"
description = "A library and CLI to solve, check, and generate proof-of-work challenges using kCTF's scheme."
license = "BSD-3-Clause"
authors = ["Aplet123 <aplet@aplet.me>"]
repository = "https://github.com/Aplet123/kctf-pow"
documentation = "https://docs.rs/kctf-pow"

[dependencies]
rug = "1.12.0"
rand = "0.8.4"
base64 = "0.13.0"

[lib]
name = "kctf_pow"
path = "src/lib.rs"

[[bin]]
name = "kctf-pow"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = 3
lto = "fat"
