[package]
name = "kctf-pow"
version = "2.1.0"
edition = "2018"
description = "A library and CLI to solve, check, and generate proof-of-work challenges using kCTF's scheme."
license = "BSD-3-Clause"
authors = ["Aplet123 <aplet@aplet.me>"]
repository = "https://github.com/Aplet123/kctf-pow"
documentation = "https://docs.rs/kctf-pow"

[dependencies]
rug = { version = "1.27.0", features = ["integer", "std"], default-features = false }
rand = { version = "0.9.1", features = ["thread_rng"], default-features = false}
base64 = "0.22.1"

[lib]
name = "kctf_pow"
path = "src/lib.rs"

[[bin]]
name = "kctf-pow"
path = "src/main.rs"
doc = false

[profile.release]
opt-level = 3
lto = "fat"
